# 685Rust

./: .gitignore  README.md  notes.md  todo.md
ch11_testing/adder/: Cargo.toml
ch11_testing/adder/src/: lib.rs
ch11_testing/adder/tests/: integration_tests.rs
ch12_CLI/minigrep/: Cargo.toml
ch12_CLI/minigrep/src/: lib.rs  main.rs
ch1_2_3/branches/: Cargo.toml
ch1_2_3/branches/loops/: Cargo.toml
ch1_2_3/functions/: Cargo.toml
ch1_2_3/guessing_game/: Cargo.toml
ch1_2_3/temp_converter/: Cargo.toml
ch1_2_3/temp_converter/src/: main.rs
ch1_2_3/variables/: Cargo.toml
ch1_2_3/variables/src/: main.rs
ch4/slice/: Cargo.toml
ch4/slice/src/: main.rs
ch5/rectangles/: Cargo.toml
ch5/rectangles/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
prov_parsing/: project_notes.md  unspaghetti.ipynb  untropy_todos.md
prov_parsing/prov_parsing/: Cargo.toml
prov_parsing/untropy/: Cargo.toml
prov_parsing/untropy/data/: test.txt
prov_parsing/untropy/src/: deserialization.rs  lib.rs  main.rs
rustlings/exercises/: quiz1.rs  quiz2.rs  quiz4.rs
rustlings/exercises/clippy/: clippy1.rs
rustlings/exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs
rustlings/exercises/enums/: enums1.rs  enums2.rs  enums3.rs
rustlings/exercises/error_handling/: errors1.rs  errors3.rs
rustlings/exercises/functions/: functions1.rs  functions4.rs
rustlings/exercises/generics/: generics3.rs
rustlings/exercises/if/: if1.rs
rustlings/exercises/macros/: macros2.rs
rustlings/exercises/option/: option1.rs
(+17 files in other folders)
