[package]
name = "untropy"
version = "0.1.0"
authors = ["Chris Keefe <crk239@nau.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
zip = "0.5.8"